src/test/ui/deprecation/deprecation-in-future.stderr
error: use of item 'deprecated_future' that will be deprecated in future version 99.99.99: text
  --> $DIR/deprecation-in-future.rs:9:5
   |
LL |     deprecated_future(); //~ ERROR use of item 'deprecated_future' that will be deprecated in future version 99.99.99: text
   |     ^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/deprecation-in-future.rs:3:9
   |
LL | #![deny(deprecated_in_future)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

